--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,3 @@
-
 @article{agarwal2019,
 	title = {Fair Regression: Quantitative Definitions and Reduction-based Algorithms},
 	author = {Agarwal, Alekh and {Dudík}, Miroslav and Wu, Zhiwei Steven},
@@ -498,5 +497,81 @@ abstract = {  The multiple regression equation predicting lung function values f
 	volume = {5},
 	doi = {10.1016/j.cpnec.2020.100025},
 	url = {http://dx.doi.org/10.1016/j.cpnec.2020.100025},
+	langid = {en}
+}
+
+@article{svanes2023,
+	title = {Preconception origins of asthma, allergies and lung function: The influence of previous generations on the respiratory health of our children},
+	author = {Svanes, Cecilie and Holloway, John W. and {Krauss{-}Etschmann}, Susanne},
+	year = {2023},
+	month = {03},
+	date = {2023-03},
+	journal = {Journal of Internal Medicine},
+	pages = {531--549},
+	volume = {293},
+	number = {5},
+	doi = {10.1111/joim.13611},
+	url = {http://dx.doi.org/10.1111/joim.13611},
+	langid = {en}
+}
+
+@article{mahon2021,
+	title = {Grandmaternal smoking, asthma and lung function in the offspring: the Lifelines cohort study},
+	author = {Mahon, Gillian M and Koppelman, Gerard H and Vonk, Judith M},
+	year = {2021},
+	month = {02},
+	date = {2021-02-04},
+	journal = {Thorax},
+	pages = {441--447},
+	volume = {76},
+	number = {5},
+	doi = {10.1136/thoraxjnl-2020-215232},
+	url = {http://dx.doi.org/10.1136/thoraxjnl-2020-215232},
+	langid = {en}
+}	
+	
+@article{movva23a,
+  title = 	 {Coarse race data conceals disparities in clinical risk score performance},
+  author =       {Movva, Rajiv and Shanmugam, Divya and Hou, Kaihua and Pathak, Priya and Guttag, John and Garg, Nikhil and Pierson, Emma},
+  booktitle = 	 {Proceedings of the 8th Machine Learning for Healthcare Conference},
+  pages = 	 {443--472},
+  year = 	 {2023},
+  editor = 	 {Deshpande, Kaivalya and Fiterau, Madalina and Joshi, Shalmali and Lipton, Zachary and Ranganath, Rajesh and Urteaga, Iñigo and Yeung, Serene},
+  volume = 	 {219},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {11--12 Aug},
+  publisher =    {PMLR},
+  pdf = 	 {https://proceedings.mlr.press/v219/movva23a/movva23a.pdf},
+  url = 	 {https://proceedings.mlr.press/v219/movva23a.html},
+  abstract = 	 {Healthcare data in the United States often records only a patient’s coarse race group: for example, both Indian and Chinese patients are typically coded as “Asian.” It is unknown, however, whether this coarse coding conceals meaningful disparities in the performance of clinical risk scores across granular race groups. Here we show that it does. Using data from 418K emergency department visits, we assess clinical risk score performance disparities across 26 granular groups for three outcomes, five risk scores, and four performance metrics. Across outcomes and metrics, we show that the risk scores exhibit significant granular performance disparities within coarse race groups. In fact, variation in performance within coarse groups often exceeds the variation between coarse groups. We explore why these disparities arise, finding that outcome rates, feature distributions, and relationships between features and outcomes all vary significantly across granular groups. Our results suggest that healthcare providers, hospital systems, and machine learning researchers should strive to collect, release, and use granular race data in place of coarse race data, and that existing analyses may significantly underestimate racial disparities in performance.}
+}
+
+
+@article{kuh1989,
+	title = {Parental Height: Childhood Environment and Subsequent Adult Height in a National Birth Cohort},
+	author = {KUH, DIANA and WADSWORTH, MICHAEL},
+	year = {1989},
+	date = {1989},
+	journal = {International Journal of Epidemiology},
+	pages = {663--668},
+	volume = {18},
+	number = {3},
+	doi = {10.1093/ije/18.3.663},
+	url = {http://dx.doi.org/10.1093/ije/18.3.663},
+	langid = {en}
+}
+
+@article{freedman2000,
+	title = {Secular Trends in Height Among Children During 2 Decades},
+	author = {Freedman, David S. and Kettel Khan, Laura and Serdula, Mary K. and Srinivasan, Sathanur R. and Berenson, Gerald S.},
+	year = {2000},
+	month = {02},
+	date = {2000-02-01},
+	journal = {Archives of Pediatrics & Adolescent Medicine},
+	pages = {155},
+	volume = {154},
+	number = {2},
+	doi = {10.1001/archpedi.154.2.155},
+	url = {http://dx.doi.org/10.1001/archpedi.154.2.155},
 	langid = {en}
 }
